# SharedResource

./: .gitignore  .version  CMakeLists.txt  Doxyfile  Master.out  Master.tex  README  _resource_managment.html  _share_auth_8cpp.html  _share_auth_8cpp__incl.map  _share_auth_8cpp__incl.md5  _share_auth_8cpp_source.html  _share_auth_8h.html  _share_auth_8h__dep__incl.map  _share_auth_8h__dep__incl.md5  _share_auth_8h__incl.md5  _share_auth_8h_source.html  _share_cache_8cpp.html  _share_cache_8cpp__incl.map  _share_cache_8cpp__incl.md5  _share_cache_8cpp_source.html  _share_cache_8h.html  _share_cache_8h__dep__incl.map  _share_cache_8h__dep__incl.md5  _share_cache_8h__incl.md5  _share_cache_8h_source.html  _share_communication_8cpp.html  _share_communication_8cpp__incl.map  _share_communication_8cpp__incl.md5  _share_communication_8cpp_source.html  _share_communication_8h.html  _share_communication_8h__dep__incl.map  _share_communication_8h__dep__incl.md5  _share_communication_8h__incl.map  _share_communication_8h__incl.md5  _share_communication_8h_source.html  _share_communication_d_bus_8h.html  _share_communication_d_bus_8h__incl.md5  _share_communication_d_bus_8h_source.html  _share_communication_network_8cpp.html  (+706 more)
Graph/DataFormat/: DataUnitsFormat.tex  DirectoryAndFileOrganisation.tex  MetaFieldFormat.tex  MetaFileFormat.tex  MetaUnitsFormat.tex
Tests/: CMakeLists.txt
Tests/SimpleTextFile/: CMakeLists.txt
Tests/SimpleTextFile/source/: simpleTextFile.cpp
Tools/: CMakeLists.txt
Tools/ShareConfigSoftware/: CMakeLists.txt
Tools/ShareConfigSoftware/interface/: ShareConfigMainWindow.h  ShareConfigWidget.h
Tools/ShareConfigSoftware/source/: ShareConfigMainWindow.cpp  ShareConfigSoftware.cpp  ShareConfigWidget.cpp
Tools/ShareDeamon/: CMakeLists.txt
Tools/ShareDeamon/source/: ShareDeamon.cpp
define/: field.tex
design/DataFormat/: DataUnitsFormat.tex  DirectoryAndFileOrganisation.tex  MetaUnitsFormat.tex
include/: ShareCache.h  ShareCommunication.h  ShareCommunicationDBus.h  ShareCommunicationNetwork.h  ShareCommunicationShareMem.h  ShareConfiguration.h  ShareDebug.h  ShareKnownResource.h  ShareMessage.h  SharePeer.h  ShareQCAAuth.h  ShareResourceStorage.h  ShareResourceStorageAuth.h  ShareResourceStorageMeta.h  ShareResourceStorageUnit.h  ShareResourceStorageUnitCommunication.h  ShareResourceStorageUnitLocalCache.h  ShareRessourceId.h  ShareUnit.h
interface/: ShareAuth.h  ShareResource.h  ShareResourceId.h
search/: all_61.js  all_63.js  all_64.js  all_67.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_75.js  all_76.js  all_77.js  classes_61.js  classes_63.js  classes_69.js  classes_6b.js  classes_6d.js  classes_70.js  classes_71.js  classes_72.js  classes_73.js  classes_75.js  classes_76.js  classes_77.js  defines_64.js  defines_6e.js  defines_72.js  defines_77.js  enums_6d.js  enums_73.js  enums_74.js  enums_75.js  enumvalues_61.js  enumvalues_63.js  enumvalues_64.js  (+43 more)
sources/: ShareAuth.cpp  ShareCache.cpp  ShareCommunication.cpp  ShareCommunicationNetwork.cpp  ShareConfiguration.cpp  ShareDebug.cpp  SharePeer.cpp  ShareResource.cpp  ShareResourceId.cpp  ShareResourceStorage.cpp  ShareResourceStorageAuth.cpp  ShareResourceStorageMeta.cpp  ShareResourceStorageUnit.cpp  ShareResourceStorageUnitCommunication.cpp  ShareResourceStorageUnitLocalCache.cpp  libSharedResource.cpp
